--- a/index.html
+++ b/index.html
@@ -4,88 +4,93 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="header">
+        <nav class="header-navigation">
+            <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
+             <ul class="heder-menu">
+                <li class="header-menu-item list"><a class="header-menu-link link" href="./index.html">Studio</a></li>
+                <li class="header-menu-item list"><a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-menu-item list"><a class="header-menu-link link" href="">Contacts</a></li>
             </ul>
         </nav>
-            <address>
-                <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <address class="header-contacts">
+                <ul class="header-menu-contacts">
+                    <li class="list"><a class="header-contacts-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="list"><a class="header-contacts-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
              </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="hero-button">Order Service</button>
         </section>
-        <section>
-            <h2>/</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+        <section class="feature">
+            <h2 class="feature-title">Why us?</h2>
+            <ul class="feature-menu">
+                <li class="feature-menu-item list">
+                    <h3 class="feature-item-title ">Strategy</h3>
+                    <p class="feature-item-paragraph">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li class="feature-menu-item list">
+                    <h3 class="feature-item-title ">Punctuality</h3>
+                    <p class="feature-item-paragraph">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <li class="feature-menu-item list">
+                    <h3 class="feature-item-title ">Diligence</h3>
+                    <p class="feature-item-paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <li class="feature-menu-item list">
+                    <h3 class="feature-item-title ">Technologies</h3>
+                    <p class="feature-item-paragraph">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li><img src="./images/img1.jpg" alt="computer" width="360" height="300"/></li>
-                <li><img src="./images/img2.jpg" alt="telephone" width="360" height="300"/></li>
-                <li><img src="./images/img3.jpg" alt="gadgets" width="360" height="300"/></li>
+        <section class="referral">
+            <h2 class="referral-title">What are we doing</h2>
+            <ul class=" referral-menu">
+                <li class="referral-menu-item list"><img class="referral-item-image" src="./images/img1.jpg" alt="computer" width="360" height="300"/></li>
+                <li class="referral-menu-item list"><img class="referral-item-image" src="./images/img2.jpg" alt="telephone" width="360" height="300"/></li>
+                <li class="referral-menu-item list"><img class="referral-item-image" src="./images/img3.jpg" alt="gadgets" width="360" height="300"/></li>
             </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/team1.jpg" alt="Mark Guerrero" width="264" height="260"/>
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+        <section class="team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-menu">
+                <li class="team-menu-item list">
+                    <img class="team-item-image" src="./images/team1.jpg" alt="Mark Guerrero" width="264" height="260"/>
+                    <h3 class="team-item-title">Mark Guerrero</h3>
+                    <p class="team-item-paragraph">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/team2.jpg" alt="Tom Ford" width="264" height="260"/>
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li class="team-menu-item list">
+                    <img class="team-item-image" src="./images/team2.jpg" alt="Tom Ford" width="264" height="260"/>
+                    <h3 class="team-item-title">Tom Ford</h3>
+                    <p class="team-item-paragraph">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/team3.jpg" alt="Camila Garcia" width="264" height="260"/>
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                <li class="team-menu-item list">
+                    <img class="team-item-image" src="./images/team3.jpg" alt="Camila Garcia" width="264" height="260"/>
+                    <h3 class="team-item-title">Camila Garcia</h3>
+                    <p class="team-item-paragraph">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/team4.jpg" alt="Daniel Wilson" width="264" height="260"/>
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                <li class="team-menu-item list">
+                    <img class="team-item-image" src="./images/team4.jpg" alt="Daniel Wilson" width="264" height="260"/>
+                    <h3 class="team-item-title">Daniel Wilson</h3>
+                    <p class="team-item-paragraph">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a class="logo" href="./index.html"><span class="logo-span">Web</span>Studio</a>
+        <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
-</html>
+</html> 
