--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
+            <a href="./index.html" class="logo-header"><span class="logo-span">Web</span>Studio</a>
              <ul class="heder-menu">
                 <li class="header-menu-item list"><a class="header-menu-link link" href="./index.html">Studio</a></li>
                 <li class="header-menu-item list"><a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
@@ -89,7 +89,7 @@
         </section>
     </main>
     <footer>
-        <a class="logo" href="./index.html"><span class="logo-span">Web</span>Studio</a>
+        <a class="logo-footer" href="./index.html"><span class="logo-span">Web</span>Studio</a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
