--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
+            <a href="./index.html" class="logo-header"><span class="logo-span">Web</span>Studio</a>
             <ul class="heder-menu">
                 <li class="header-menu-item list"><a class="header-menu-link link" href="./index.html">Studio</a></li>
                 <li class="header-menu-item list"><a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
@@ -33,64 +33,75 @@
         </address>
     </header>
     <main>
-        <ul class="portfolio-menu-button">
-            <li class="portfolio-item-button"><button class="portfolio-button" type="button">All</button></li>
-            <li class="portfolio-item-button"><button class="portfolio-button" type="button">Web Site</button></li>
-            <li class="portfolio-item-button"><button class="portfolio-button" type="button">App</button></li>
-            <li class="portfolio-item-button"><button class="portfolio-button" type="button">Design</button></li>
-            <li class="portfolio-item-button"><button class="portfolio-button" type="button">Marketing</button></li>
-        </ul>
-        <ul class="portfolio-menu-feature">
-            <li class="portfolio-feature-items">
-                <img class="portfolio-feature-image" src="./images/portfolio-img1.jpg" alt="banking app" width="360" height="300">
-                <h3 class="portfolio-feature-title">Banking App Interface Concept</h3>
-                <p class="portfolio-feature-paragraph">App</p>
-            </li>
-            <li class="portfolio-feature-items">
-                <img class="portfolio-feature-image" src="./images/portfolio-img2.jpg" alt="cashles payment" width="360" height="300">
-                <h3 class="portfolio-feature-title">Cashless Payment</h3>
-                <p class="portfolio-feature-paragraph">Marketing</p>
-            </li>
-            <li class="portfolio-feature-items">
-                <img class="portfolio-feature-image" src="./images/portfolio-img3.jpg" alt="meditation app" width="360" height="300">
-                <h3 class="portfolio-feature-title">Meditation App</h3>
-                <p class="portfolio-feature-paragraph">App</p>
-            </li>
-            <li class="portfolio-feature-items">
-                <img class="portfolio-feature-image" src="./images/portfolio-img4.jpg" alt="taxi service" width="360" height="300">
-                <h3 class="portfolio-feature-title">Taxi Service</h3>
-                <p class="portfolio-feature-paragraph">Marketing</p>
-            </li>
-            <li class="portfolio-feature-items">
-                <img class="portfolio-feature-image" src="./images/portfolio-img5.jpg" alt="screen illumination" width="360" height="300">
-                <h3 class="portfolio-feature-title">Screen Illustrations</h3>
-                <p class="portfolio-feature-paragraph">Design</p>
-            </li>
-            <li class="portfolio-feature-items">
-                <img class="portfolio-feature-image" src="./images/portfolio-img6.jpg" alt="online courses" width="360" height="300">
-                <h3 class="portfolio-feature-title">Online Courses</h3>
-                <p class="portfolio-feature-paragraph">Marketing</p>
-            </li>
-            <li class="portfolio-feature-items">
-                <img class="portfolio-feature-image" src="./images/portfolio-img7.jpg" alt="instagram concept" width="360" height="300">
-                <h3 class="portfolio-feature-title">Instagram Stories Concept</h3>
-                <p class="portfolio-feature-paragraph">Design</p>
-            </li>
-            <li class="portfolio-feature-items">
-                <img class="portfolio-feature-image" src="./images/portfolio-img8.jpg" alt="organic food" width="360" height="300">
-                <h3 class="portfolio-feature-title">Organic Food</h3>
-                <p class="portfolio-feature-paragraph">Web Site</p>
-            </li>
-            <li class="portfolio-feature-items">
-                <img class="portfolio-feature-image" src="./images/portfolio-img9.jpg" alt="freesh cofee" width="360" height="300">
-                <h3 class="portfolio-feature-title">Fresh Coffee</h3>
-                <p class="portfolio-feature-paragraph">Web Site</p>
-            </li class="portfolio-feature-items">
-        </ul>
-        
+        <section class="portfolio">
+            <h1></h1>
+            <ul class="portfolio-menu-button">
+                <li class="portfolio-item-button list"><button class="portfolio-button" type="button">All</button></li>
+                <li class="portfolio-item-button list"><button class="portfolio-button" type="button">Web Site</button></li>
+                <li class="portfolio-item-button list"><button class="portfolio-button" type="button">App</button></li>
+                <li class="portfolio-item-button list"><button class="portfolio-button" type="button">Design</button></li>
+                <li class="portfolio-item-button list"><button class="portfolio-button" type="button">Marketing</button></li>
+            </ul>
+            <ul class="portfolio-menu-feature">
+                <li class="portfolio-feature-items list">
+                    <img class="portfolio-feature-image" src="./images/portfolio-img1.jpg" alt="banking app" width="360"
+                        height="300">
+                    <h2 class="portfolio-feature-title">Banking App Interface Concept</h2>
+                    <p class="portfolio-feature-paragraph">App</p>
+                </li>
+                <li class="portfolio-feature-items list">
+                    <img class="portfolio-feature-image" src="./images/portfolio-img2.jpg" alt="cashles payment" width="360"
+                        height="300">
+                    <h2 class="portfolio-feature-title">Cashless Payment</h2>
+                    <p class="portfolio-feature-paragraph">Marketing</p>
+                </li>
+                <li class="portfolio-feature-items list">
+                    <img class="portfolio-feature-image" src="./images/portfolio-img3.jpg" alt="meditation app" width="360"
+                        height="300">
+                    <h2 class="portfolio-feature-title">Meditation App</h2>
+                    <p class="portfolio-feature-paragraph">App</p>
+                </li>
+                <li class="portfolio-feature-items list">
+                    <img class="portfolio-feature-image" src="./images/portfolio-img4.jpg" alt="taxi service" width="360"
+                        height="300">
+                    <h2 class="portfolio-feature-title">Taxi Service</h2>
+                    <p class="portfolio-feature-paragraph">Marketing</p>
+                </li>
+                <li class="portfolio-feature-items list">
+                    <img class="portfolio-feature-image" src="./images/portfolio-img5.jpg" alt="screen illumination" width="360"
+                        height="300">
+                    <h2 class="portfolio-feature-title">Screen Illustrations</h2>
+                    <p class="portfolio-feature-paragraph">Design</p>
+                </li>
+                <li class="portfolio-feature-items list">
+                    <img class="portfolio-feature-image" src="./images/portfolio-img6.jpg" alt="online courses" width="360"
+                        height="300">
+                    <h2 class="portfolio-feature-title">Online Courses</h2>
+                    <p class="portfolio-feature-paragraph">Marketing</p>
+                </li>
+                <li class="portfolio-feature-items list">
+                    <img class="portfolio-feature-image" src="./images/portfolio-img7.jpg" alt="instagram concept" width="360"
+                        height="300">
+                    <h2 class="portfolio-feature-title">Instagram Stories Concept</h2>
+                    <p class="portfolio-feature-paragraph">Design</p>
+                </li>
+                <li class="portfolio-feature-items list">
+                    <img class="portfolio-feature-image" src="./images/portfolio-img8.jpg" alt="organic food" width="360"
+                        height="300">
+                    <h2 class="portfolio-feature-title">Organic Food</h2>
+                    <p class="portfolio-feature-paragraph">Web Site</p>
+                </li>
+                <li class="portfolio-feature-items list">
+                    <img class="portfolio-feature-image" src="./images/portfolio-img9.jpg" alt="freesh cofee" width="360"
+                        height="300">
+                    <h2 class="portfolio-feature-title">Fresh Coffee</h2>
+                    <p class="portfolio-feature-paragraph">Web Site</p>
+                </li class="portfolio-feature-items">
+            </ul>
+        </section>  
     </main>
     <footer>
-        <a class="logo" href="./index.html"><span class="logo-span">Web</span>Studio</a>
+        <a class="logo-footer" href="./index.html"><span class="logo-span">Web</span>Studio</a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
