--- a/portfolio.html
+++ b/portfolio.html
@@ -15,83 +15,81 @@
 
 <body>
     <header class="header">
-        <nav class="header-navigation">
-            <a href="./index.html" class="logo-header"><span class="logo-span">Web</span>Studio</a>
-            <ul class="heder-menu">
-                <li class="header-menu-item list"><a class="header-menu-link link" href="./index.html">Studio</a></li>
-                <li class="header-menu-item list"><a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="header-menu-item list"><a class="header-menu-link link" href="">Contacts</a></li>
+        <nav class="header-navigation list">
+            <a href="./index.html" class="logo-header link">Web<span class="logo-span-header">Studio</span></a>
+            <ul class="heder-menu list">
+                <li class="header-menu-item"><a class="header-menu-link link" href="./index.html">Studio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="header-contacts">
-            <ul class="header-menu-contacts">
-                <li class="list"><a class="header-contacts-item link"
-                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="list"><a class="header-contacts-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="header-menu-contacts list">
+                <li><a class="header-contacts-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="header-contacts-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
         <section class="portfolio">
-            <h1></h1>
-            <ul class="portfolio-menu-button">
-                <li class="portfolio-item-button list"><button class="portfolio-button" type="button">All</button></li>
-                <li class="portfolio-item-button list"><button class="portfolio-button" type="button">Web Site</button></li>
-                <li class="portfolio-item-button list"><button class="portfolio-button" type="button">App</button></li>
-                <li class="portfolio-item-button list"><button class="portfolio-button" type="button">Design</button></li>
-                <li class="portfolio-item-button list"><button class="portfolio-button" type="button">Marketing</button></li>
+            <h1>Portfolio</h1>
+            <ul class="portfolio-menu-button list">
+                <li class="portfolio-item-button"><button class="portfolio-button" type="button">All</button></li>
+                <li class="portfolio-item-button"><button class="portfolio-button" type="button">Web Site</button></li>
+                <li class="portfolio-item-button"><button class="portfolio-button" type="button">App</button></li>
+                <li class="portfolio-item-button"><button class="portfolio-button" type="button">Design</button></li>
+                <li class="portfolio-item-button"><button class="portfolio-button" type="button">Marketing</button></li>
             </ul>
-            <ul class="portfolio-menu-feature">
-                <li class="portfolio-feature-items list">
+            <ul class="portfolio-menu-feature list">
+                <li class="portfolio-feature-items">
                     <img class="portfolio-feature-image" src="./images/portfolio-img1.jpg" alt="banking app" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Banking App Interface Concept</h2>
                     <p class="portfolio-feature-paragraph">App</p>
                 </li>
-                <li class="portfolio-feature-items list">
+                <li class="portfolio-feature-items">
                     <img class="portfolio-feature-image" src="./images/portfolio-img2.jpg" alt="cashles payment" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Cashless Payment</h2>
                     <p class="portfolio-feature-paragraph">Marketing</p>
                 </li>
-                <li class="portfolio-feature-items list">
+                <li class="portfolio-feature-items">
                     <img class="portfolio-feature-image" src="./images/portfolio-img3.jpg" alt="meditation app" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Meditation App</h2>
                     <p class="portfolio-feature-paragraph">App</p>
                 </li>
-                <li class="portfolio-feature-items list">
+                <li class="portfolio-feature-items">
                     <img class="portfolio-feature-image" src="./images/portfolio-img4.jpg" alt="taxi service" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Taxi Service</h2>
                     <p class="portfolio-feature-paragraph">Marketing</p>
                 </li>
-                <li class="portfolio-feature-items list">
+                <li class="portfolio-feature-items">
                     <img class="portfolio-feature-image" src="./images/portfolio-img5.jpg" alt="screen illumination" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Screen Illustrations</h2>
                     <p class="portfolio-feature-paragraph">Design</p>
                 </li>
-                <li class="portfolio-feature-items list">
+                <li class="portfolio-feature-items">
                     <img class="portfolio-feature-image" src="./images/portfolio-img6.jpg" alt="online courses" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Online Courses</h2>
                     <p class="portfolio-feature-paragraph">Marketing</p>
                 </li>
-                <li class="portfolio-feature-items list">
+                <li class="portfolio-feature-items">
                     <img class="portfolio-feature-image" src="./images/portfolio-img7.jpg" alt="instagram concept" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Instagram Stories Concept</h2>
                     <p class="portfolio-feature-paragraph">Design</p>
                 </li>
-                <li class="portfolio-feature-items list">
+                <li class="portfolio-feature-items">
                     <img class="portfolio-feature-image" src="./images/portfolio-img8.jpg" alt="organic food" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Organic Food</h2>
                     <p class="portfolio-feature-paragraph">Web Site</p>
                 </li>
-                <li class="portfolio-feature-items list">
+                <li class="portfolio-feature-items">
                     <img class="portfolio-feature-image" src="./images/portfolio-img9.jpg" alt="freesh cofee" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Fresh Coffee</h2>
@@ -100,8 +98,8 @@
             </ul>
         </section>  
     </main>
-    <footer>
-        <a class="logo-footer" href="./index.html"><span class="logo-span">Web</span>Studio</a>
+    <footer class="footer">
+        <a class="logo-footer link" href="./index.html">Web<span class="logo-span-footer">Studio</span></a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
