--- a/portfolio.html
+++ b/portfolio.html
@@ -40,62 +40,62 @@
                 <li class="portfolio-item-button"><button class="portfolio-button" type="button">Design</button></li>
                 <li class="portfolio-item-button"><button class="portfolio-button" type="button">Marketing</button></li>
             </ul>
-            <ul class="portfolio-menu-feature list">
-                <li class="portfolio-feature-items">
+            <ol class="portfolio-menu-feature list">
+                <li class="portfolio-feature-items link">
                     <img class="portfolio-feature-image" src="./images/portfolio-img1.jpg" alt="banking app" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Banking App Interface Concept</h2>
                     <p class="portfolio-feature-paragraph">App</p>
                 </li>
-                <li class="portfolio-feature-items">
+                <li class="portfolio-feature-items link">
                     <img class="portfolio-feature-image" src="./images/portfolio-img2.jpg" alt="cashles payment" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Cashless Payment</h2>
                     <p class="portfolio-feature-paragraph">Marketing</p>
                 </li>
-                <li class="portfolio-feature-items">
+                <li class="portfolio-feature-items link">
                     <img class="portfolio-feature-image" src="./images/portfolio-img3.jpg" alt="meditation app" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Meditation App</h2>
                     <p class="portfolio-feature-paragraph">App</p>
                 </li>
-                <li class="portfolio-feature-items">
+                <li class="portfolio-feature-items link">
                     <img class="portfolio-feature-image" src="./images/portfolio-img4.jpg" alt="taxi service" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Taxi Service</h2>
                     <p class="portfolio-feature-paragraph">Marketing</p>
                 </li>
-                <li class="portfolio-feature-items">
+                <li class="portfolio-feature-items link">
                     <img class="portfolio-feature-image" src="./images/portfolio-img5.jpg" alt="screen illumination" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Screen Illustrations</h2>
                     <p class="portfolio-feature-paragraph">Design</p>
                 </li>
-                <li class="portfolio-feature-items">
+                <li class="portfolio-feature-items link">
                     <img class="portfolio-feature-image" src="./images/portfolio-img6.jpg" alt="online courses" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Online Courses</h2>
                     <p class="portfolio-feature-paragraph">Marketing</p>
                 </li>
-                <li class="portfolio-feature-items">
+                <li class="portfolio-feature-items link">
                     <img class="portfolio-feature-image" src="./images/portfolio-img7.jpg" alt="instagram concept" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Instagram Stories Concept</h2>
                     <p class="portfolio-feature-paragraph">Design</p>
                 </li>
-                <li class="portfolio-feature-items">
+                <li class="portfolio-feature-items link">
                     <img class="portfolio-feature-image" src="./images/portfolio-img8.jpg" alt="organic food" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Organic Food</h2>
                     <p class="portfolio-feature-paragraph">Web Site</p>
                 </li>
-                <li class="portfolio-feature-items">
+                <li class="portfolio-feature-items link">
                     <img class="portfolio-feature-image" src="./images/portfolio-img9.jpg" alt="freesh cofee" width="360"
                         height="300">
                     <h2 class="portfolio-feature-title">Fresh Coffee</h2>
                     <p class="portfolio-feature-paragraph">Web Site</p>
                 </li class="portfolio-feature-items">
-            </ul>
+            </ol>
         </section>  
     </main>
     <footer class="footer">
