--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                 <li class="portfolio-item-button"><button class="portfolio-button" type="button">Design</button></li>
                 <li class="portfolio-item-button"><button class="portfolio-button" type="button">Marketing</button></li>
             </ul>
-            <ol class="portfolio-menu-feature list">
+            <ul class="portfolio-menu-feature list">
                 <li class="portfolio-feature-items link">
                     <img class="portfolio-feature-image" src="./images/portfolio-img1.jpg" alt="banking app" width="360"
                         height="300">
@@ -95,7 +95,7 @@
                     <h2 class="portfolio-feature-title">Fresh Coffee</h2>
                     <p class="portfolio-feature-paragraph">Web Site</p>
                 </li class="portfolio-feature-items">
-            </ol>
+            </ul>
         </section>  
     </main>
     <footer class="footer">
