--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="logo-footer link" href="./index.html">Web<span class="logo-span">Studio</span></a>
+        <a class="logo-footer link" href="./index.html">Web<span class="logo-span-footer">Studio</span></a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
